# warehouse_system

./: .env.example  .gitignore  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/api/: inboundorders.py  products.py  requisitions.py  staffs.py  suppliers.py  warehouse.py
app/core/: database.py  seed.py
app/models/: __init__.py  inbound_order.py  product.py  requisition.py  staff.py  supplier.py  warehouse.py
app/schemas/: error.py  inboundorder.py  product.py  requisition.py  staff.py  supplier.py  warehouse.py
templates/: add_client.html  add_inbound.html  add_product.html  add_requisitions.html  add_staff.html  add_supplier.html  add_warehouse.html  client.html  inbound.html  login.html  order.html  product.html  product_2.html  requisitions.html  staff.html  storehouse.html  supplier.html  warehouse.html
